--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,46 @@
+version: '3.8'
+
 services:
   stats-server:
+    build:
+      context: ./stats-http-service
+      dockerfile: Dockerfile
     ports:
       - "9090:9090"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://stats-db:5432/stats_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+    depends_on:
+      - stats-db
 
   stats-db:
     image: postgres:16.1
+    environment:
+      POSTGRES_DB: stats_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
 
   ewm-service:
+    build:
+      context: ./stats-http-client
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://ewm-db:5432/ewm_db
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+    depends_on:
+      - ewm-db
 
   ewm-db:
     image: postgres:16.1
+    environment:
+      POSTGRES_DB: ewm_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+
+networks:
+  default:
+    driver: bridge
