--- a/stats-http-service/src/main/resources/application.yml
+++ b/stats-http-service/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: update
+      #      validated для docker сборки, в live режиме update
+      ddl-auto: validated
     show-sql: true
     properties:
       hibernate:
