--- a/stats-http-service/src/main/resources/application.yml
+++ b/stats-http-service/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:postgresql://localhost:5432/stats_db
+    username: postgres
+    password: postgres
   jpa:
     hibernate:
-      #      validated для docker сборки, в live режиме update
-      ddl-auto: validated
+      ddl-auto: validated # validated для docker сборки, в live режиме update
     show-sql: true
     properties:
       hibernate:
