--- a/stats-http-service/src/main/resources/application.yml
+++ b/stats-http-service/src/main/resources/application.yml
@@ -5,11 +5,14 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: validated
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+  sql:
+    init:
+      schema-locations: classpath:schema.sql
 
 logging:
   level:
