--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
     ports:
       - "9090:9090"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/stats_db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://stats-db:5432/stats_db
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
+    depends_on:
+      - stats-db
 
   stats-db:
     image: postgres:16.1
@@ -18,7 +20,3 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
-
-networks:
-  default:
-    driver: bridge
