--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
 	<name>Explore With Me</name>
 	<modules>
 		<module>stats-http-service</module>
+		<module>main-service</module>
 	</modules>
 
-	<groupId>ru.practicum</groupId>
+    <groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
