--- a/stats-http-service/src/main/resources/application.yml
+++ b/stats-http-service/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/db
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${POSTGRES_HOST:postgres-db}:${POSTGRES_PORT}/${POSTGRES_DB_STATS}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
   sql:
     init:
-      mode: never
+      mode: always
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
@@ -18,10 +18,10 @@ spring:
 
 logging:
   level:
-    root: INFO
-    sql: TRACE
+    root: DEBUG
+    sql: DEBUG
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss} - %msg%n'
 
 server:
-  port: 9090
+  port: ${STATS_SERVICE_PORT:9090}
