--- a/main-service/Dockerfile
+++ b/main-service/Dockerfile
@@ -1,6 +1,5 @@
-FROM openjdk:21-jdk-slim
+FROM eclipse-temurin:21-jre-jammy
 VOLUME /tmp
-
-COPY target/main-service-0.0.1-SNAPSHOT.jar app.jar
-
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar /app.jar"]
