--- a/main-service/src/main/resources/application.yml
+++ b/main-service/src/main/resources/application.yml
@@ -1,56 +1,28 @@
+server:
+  port: 8080
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/main_db
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-  sql:
-    init:
-      mode: always
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
         format_sql: true
-
+        show_sql: true
+        use_sql_comments: true
+  datasource:
+    url: jdbc:postgresql://localhost:5431/main_db
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
+  sql:
+    init:
+      mode: always
 logging:
   level:
-    root: DEBUG
-    sql: DEBUG
-  pattern:
-    console: '%d{yyyy-MM-dd HH:mm:ss} - %msg%n'
-
-server:
-  port: 8080
-
-
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://${POSTGRES_HOST:postgres-db}:${POSTGRES_PORT}/${POSTGRES_DB_MAIN}
-#    username: ${POSTGRES_USER}
-#    password: ${POSTGRES_PASSWORD}
-#    driver-class-name: org.postgresql.Driver
-#  sql:
-#    init:
-#      mode: always
-#  jpa:
-#    hibernate:
-#      ddl-auto: none
-#    show-sql: true
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
-#    properties:
-#      hibernate:
-#        format_sql: true
-#
-#logging:
-#  level:
-#    root: DEBUG
-#    sql: DEBUG
-#  pattern:
-#    console: '%d{yyyy-MM-dd HH:mm:ss} - %msg%n'
-#
-#server:
-#  port: ${MAIN_SERVICE_PORT}
+    org:
+      springframework:
+        orm:
+          jpa: INFO
+          jpa.JpaTransactionManager: DEBUG
+        transaction: INFO
+        transaction.interceptor: TRACE
