--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<name>Explore With Me</name>
 	<modules>
-		<module>stats-http-service</module>
+		<module>stats</module>
 	</modules>
 
 	<groupId>ru.practicum</groupId>
@@ -23,7 +23,26 @@
 	<properties>
 		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<org.mapstruct.version>1.6.2</org.mapstruct.version>
+		<com.mysema.maven.apt-maven-plugin.version>1.1.3</com.mysema.maven.apt-maven-plugin.version>
+		<com.querydsl.version>5.1.0</com.querydsl.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>${org.mapstruct.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.querydsl</groupId>
+				<artifactId>querydsl-jpa</artifactId>
+				<classifier>jakarta</classifier>
+				<version>${com.querydsl.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<pluginManagement>
